<resources>
    <string name="app_name">MVVM_Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_menu">Start</string>
    <string name="rezerwacje_menu">Rezerwacje</string>
    <string name="profil_menu">Profil</string>
    <string name="travel_destination">Miejsce podróży</string>
    <string name="travel_date">Data wyjazdu</string>
    <string name="travel_people_rooms">1 pokój | 2 dorosłych | 0 dzieci</string>
    <string name="travel_search">Szukaj</string>
    <string name="search_enter_place">Podaj miejsce wyjazdu</string>
    <string name="bottom_enter_people_rooms">Podaj liczbę osób oraz pokoi</string>
    <string name="bottom_rooms">Pokoje</string>
    <string name="bottom_minus">-</string>
    <string name="bottom_plus">+</string>
    <string name="bottom_adults">Dorośli</string>
    <string name="bottom_kids">Dzieci</string>
</resources>